dark mode issue corrected

--- a/css/global.css
+++ b/css/global.css
@@ -1,3 +1,6 @@
+:root {
+  color-scheme: light only;
+}
 body {
   font-family: "fira sans", arial, sans-serif;
   margin: 0px;
